--- a/templates/add.html
+++ b/templates/add.html
@@ -8,51 +8,58 @@
                    style="border: dashed 1px #a3a3a3;"/>
         </div>
 
-        <span class="block_title"><label for="snip">putSnip below</label></span>
+        <span class="block_title"><label for="snip">putSnip below (required)</label></span>
         {% if nocode %}
             <span class="block warning">code is required dummy</span>
         {% endif %}
         <div class="block">
             <textarea id="snip" name="snip" placeholder="feed me that tasty code snippet"></textarea>
         </div>
-        <span class="block_space"></span>
 
-        <span class="block_title"><label for="lan">select language</label></span>
+        <span class="block_title">
+            <label>what language?
+                <select name="lan">
+                    <option>Apple Script</option>
+                    <option>Action Script 3</option>
+                    <option value="bash">Bash / Shell</option>
+                    <option>Cold Fusion</option>
+                    <option>C</option>
+                    <option value="cpp">C++</option>
+                    <option>C#</option>
+                    <option>CSS</option>
+                    <option>Delphi</option>
+                    <option>Diff</option>
+                    <option>Erlang</option>
+                    <option>Groovy</option>
+                    <option>HTML</option>
+                    <option>Java</option>
+                    <option value="Java_FX">Java FX</option>
+                    <option>Javascript</option>
+                    <option>Perl</option>
+                    <option>PHP</option>
+                    <option selected="selected" value="plain">Plain Text</option>
+                    <option>Python</option>
+                    <option>Ruby</option>
+                    <option>Scala</option>
+                    <option>Sql</option>
+                    <option value="vb">Visual Basic</option>
+                    <option>XML</option>
+                </select>
+            </label>
+        </span>
 
         <div class="block">
-            <select id="lan" name="lan">
-                <option>Apple Script</option>
-                <option>Action Script 3</option>
-                <option value="bash">Bash / Shell</option>
-                <option>Cold Fusion</option>
-                <option>C</option>
-                <option value="cpp">C++</option>
-                <option>C#</option>
-                <option>CSS</option>
-                <option>Delphi</option>
-                <option>Diff</option>
-                <option>Erlang</option>
-                <option>Groovy</option>
-                <option>HTML</option>
-                <option>Java</option>
-                <option value="Java_FX">Java FX</option>
-                <option>Javascript</option>
-                <option>Perl</option>
-                <option>PHP</option>
-                <option selected="selected" value="plain">Plain Text</option>
-                <option>Python</option>
-                <option>Ruby</option>
-                <option>Scala</option>
-                <option>Sql</option>
-                <option value="vb">Visual Basic</option>
-                <option>XML</option>
-            </select>
+
         </div>
-        <span class="block_space"></span>
-        <span class="block_title"><label for="tags">add some tags</label></span>
 
+        <span class="block_title"><label for="desc">description</label></span>
         <div class="block">
-            <input id="tags" name="tags"/>
+            <textarea id="desc" name="desc" placeholder="what did you give me?"></textarea>
+        </div>
+
+        <span class="block_title"><label for="tags1">add some tags</label></span>
+        <div class="block">
+            <input id="tags1" name="tags" autocomplete="off" />
         </div>
 
         <span class="block_space"></span>
@@ -72,7 +79,7 @@
                         $(this).get(0).selectionEnd = start + 1;
             }
         });
-        $('#tags').tagsInput({
+        $('#tags1').tagsInput({
             width:'450px',
             height:'20px'
         });
