added more ways to get Snips in models.Snip. Working them into entry.py

--- a/templates/list.html
+++ b/templates/list.html
@@ -20,7 +20,7 @@
                         {{ snip.tags }}
                     </div>
                     <div class="info">
-                        <a href="/u/{{ snip.name }}">{{ snip.name }}</a><br/>
+                        <a href="/u/{{ snip.usr }}">{{ snip.usr }}</a><br/>
                         {{ snip.datetime }}
                         </div>
                 </div>
