--- a/templates/snippet.html
+++ b/templates/snippet.html
@@ -22,10 +22,16 @@
         <script type="syntaxhighlighter" class="brush: {% firstof snip.lan 'plain' %}">
             <![CDATA[{{ snip.code|safe }}]]>
         </script>
-
     </div>
+    {% if snip.desc %}
+        <div class="block" style="padding: 5px 5px; font-size: 14px; background-color: #f7f7f7;">
+            <span class="mini_info" style="font-weight: bold;">description</span><br/>
+            <pre style="">{{ snip.desc }}</pre>
+        </div>
+        <span class="block_space"></span>
+    {% endif %}
     <span class="mini_info">
-        Submitted by <a href="/u/{{ snip.name }}">{{ snip.name }}</a>, datetime: {{ snip.datetime }}<br/>
+        Submitted by <a href="/u/{{ snip.usr }}">{{ snip.usr }}</a>, datetime: {{ snip.datetime }}<br/>
         {{ snip.points }} points, {{ snip.views }} views
     </span>
     <span class="block_space"></span>
