--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,3 +1,3 @@
-{% for tag in tags %}
+{% for tag in tags_trend %}
     <a href="/t/{{ tag.name }}" style="font-weight: bold;font-size: {{ tag.size }}px; color: rgb(255, 0, {{ tag.color }});">{{ tag.name }}</a>
 {% endfor %}
