--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="/static/lib/syntax/styles/shThemeDefault.css"/>
 
     <link rel="stylesheet" href="/static/css/main.css">
+
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-36933330-1']);
+        _gaq.push(['_setDomainName', 'putsnip.com']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </head>
 <body>
 <div id="main_container">
