--- a/templates/main.html
+++ b/templates/main.html
@@ -68,7 +68,7 @@
     <div id="right">
         {% block right %}
             <span class="block_title">Advertisements (duh right?)</span>
-            <div class="block">Waiting for adsense approval :P</div>
+            <div class="block">Waiting for AdSense approval :P</div>
             <span class="block_title">Popular Tags</span>
             <div class="block">
                 {% include 'tags.html' %}
